# bullet_prove

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  NOTES.txt  README.dvc.md  README.md  checkpoints.dvc  data2.dvc  data3.dvc  requirements.txt
.dvc/: config
bulletprove/: __init__.py  data_gen.py  dataset.py  generator.py  model.py
data/annotations/: 00000.json  00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  00018.json  00019.json  00020.json  00021.json  00022.json  00023.json  00024.json  00025.json  00026.json  00027.json  00028.json  00029.json  00030.json  00031.json  00032.json  00033.json  00034.json  00035.json  00036.json  00037.json  00038.json  00039.json  (+460 more)
examples/: generate_target.ipynb  scatter_hist.ipynb
qml_app/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Main.qml  README.md  main.cpp
scripts/: annotate.py  detect.py  export_tflite.py  generate_data.py  train.py  visualize_model.py
tests/: context.py  tests_basic.py
