cmake_minimum_required(VERSION 3.16)
project(BulletProveApp VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.5 REQUIRED COMPONENTS Quick QuickControls2)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(BulletProveApp
    main.cpp
)

qt_add_qml_module(BulletProveApp
    URI BulletProve
    VERSION 1.0
    QML_FILES
        Main.qml
)

target_link_libraries(BulletProveApp
    PRIVATE
        Qt6::Quick
        Qt6::QuickControls2
)

# Required for macOS bundle and Windows GUI subsystem
set_target_properties(BulletProveApp PROPERTIES
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)
